[package]
name = "error-code"
version = "0.1.0"
edition = "2021"

[dependencies]
error-code-derive = { workspace = true }
base64 = "0.22.1"

[dev-dependencies]
anyhow = { workspace = true }
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
backtrace = "0.3.73"
error-code = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
